# JadeCore4.3.4

./: CMakeLists.txt  README.md  revision.h.in.cmake
cmake/: showoptions.cmake
dep/: CMakeLists.txt
dep/StormLib/: CMakeLists.txt
dep/acelite/: CMakeLists.txt  ChangeLog
dep/acelite/ace/: CMakeLists.txt
dep/bzip2/: CMakeLists.txt
dep/g3dlite/: CMakeLists.txt
dep/gsoap/: CMakeLists.txt
dep/jemalloc/: CMakeLists.txt
dep/mysqllite/: CMakeLists.txt
dep/mysqllite/strings/: ctype-big5.c  ctype-utf8.c
dep/recastnavigation/: CMakeLists.txt
dep/recastnavigation/Detour/: CMakeLists.txt
dep/recastnavigation/Recast/: CMakeLists.txt
dep/zlib/: CMakeLists.txt
sql/SmartAI/patch/: patch_Installer.bat
sql/base/: auth_database.sql  characters_database.sql
sql/base/dev/: world_database.sql
sql/custom/world/: 2016_09_12_00_world_item_template.sql
src/: CMakeLists.txt
src/genrev/: CMakeLists.txt
src/server/: CMakeLists.txt
src/server/authserver/: CMakeLists.txt  Main.cpp  authserver.conf.dist  authserver.rc
src/server/collision/: CMakeLists.txt
src/server/game/: CMakeLists.txt
src/server/game/World/: World.h  (+1 more)
src/server/scripts/: CMakeLists.txt
src/server/shared/: CMakeLists.txt  SystemConfig.h
src/server/worldserver/: CMakeLists.txt  Main.cpp  Master.cpp  worldserver.conf.dist  worldserver.rc
src/tools/: CMakeLists.txt
src/tools/map_extractor/: CMakeLists.txt
src/tools/mesh_extractor/: CMakeLists.txt
src/tools/mmaps_generator/: CMakeLists.txt
src/tools/vmap4_assembler/: CMakeLists.txt
src/tools/vmap4_extractor/: CMakeLists.txt
(+112 files in other folders)
